It has an option to use a single such buffer on selected frame, or
by default use the last buffer that navigated to the current buffer.

** Eshell

---
*** Expansion of history event designators is disabled by default.
To restore the old behavior, use

    (add-hook 'eshell-expand-input-functions
              #'eshell-expand-history-references)

** Tramp

+++
*** New connection method "owncloud", which allows to access OwnCloud
or NextCloud hosted files and directories.


* Startup Changes in Emacs 26.1

+++
** Emacs can now visit files in archives as if they were directories.
This feature uses Tramp and works only on systems which support GVFS,
i.e. GNU/Linux, roughly spoken.  See the chapter "(tramp) Archive file
names" in the Tramp manual for full documentation of these facilities.


* Changes in Emacs 26.1

+++
** Option 'buffer-offer-save' can be set to new value, 'always'.  When
   set to 'always', the command `save-some-buffers' will always offer
   this buffer for saving.

** Security vulnerability related to Enriched Text mode is removed.

+++
*** Enriched Text mode does not evaluate Lisp in 'display' properties.
This feature allows saving 'display' properties as part of text.
Emacs 'display' properties support evaluation of arbitrary Lisp forms
as part of processing the property for display, so displaying Enriched
Text could be vulnerable to executing arbitrary malicious Lisp code
included in the text (e.g., sent as part of an email message).
Therefore, execution of arbitrary Lisp forms in 'display' properties
decoded by Enriched Text mode is now disabled by default.  Customize
the new option 'enriched-allow-eval-in-display-props' to a non-nil
value to allow Lisp evaluation in decoded 'display' properties.

This vulnerability was introduced in Emacs 21.1.  To work around that
in Emacs versions before 25.3, append the following to your ~/.emacs
init file:

  (eval-after-load "enriched"
    '(defun enriched-decode-display-prop (start end &optional param)